umol-io/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@scifinder_512-69-6.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C18O16
      atom_count: 34
      bond_count: 36
      property_count: 11
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C18O16
      atom_count: 34
      bond_count: 36
      property_count: 11
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C18O16
      atom_count: 34
      bond_count: 36
      extended_atoms: 0
      extended_bonds: 0
      property_count: 11
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C18O16
      atom_count: 34
      bond_count: 36
      extended_atoms: 0
      extended_bonds: 0
      property_count: 11
      rgroup_count: 0
      sgroup_count: 0
